--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@octokit/rest": "^15.2.7",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-3": "^6.24.1",
     "babel-register": "^6.26.0",
@@ -45,6 +46,8 @@
     "webpack-merge": "^4.1.2"
   },
   "babel": {
-    "presets": ["env"]
+    "presets": [
+      "env"
+    ]
   }
 }
