--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue": "^2.5.16",
     "vue-loader": "^15.0.9",
     "vue-template-compiler": "^2.5.16",
+    "vuex": "^3.0.1",
     "webpack": "^4.7.0",
     "webpack-build-notifier": "^0.1.25",
     "webpack-cli": "^2.1.2",
