--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "chai-as-promised": "^7.1.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^0.28.11",
+    "d3": "^5.2.0",
+    "d3-force-cluster": "^0.1.2",
     "html-webpack-plugin": "^3.2.0",
     "mocha": "^5.1.1",
     "node-sass": "^4.9.0",
